--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "cx/fizzbuzz",
+    "name": "gqmnr/kata-phpunit-skeleton",
     "type": "project",
     "require-dev": {
         "phpunit/phpunit": "^10.0"
@@ -7,12 +7,12 @@
     "license": "MIT",
     "autoload": {
         "psr-4": {
-            "GQ\\TruncateLine\\": "src/"
+            "GQ\\Kata\\": "src/"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "GQ\\TruncateLine\\Tests\\": "tests/"
+            "GQ\\Kata\\Tests\\": "tests/"
         }
     },
     "authors": [
